2. Made hero section

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -2,9 +2,9 @@ html {
   scroll-behavior: smooth;
 }
 
-// body {
-
-// }
+body {
+  font-family: $font-family3;
+}
 
 .container {
   max-width: $container;
