--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -4,12 +4,14 @@ $font-family1: 'Inter', sans-serif;
 $font-family2: 'Manrope', sans-serif;
 $font-family3: 'Montserrat', sans-serif;
 
-$bg-color: #F3F5F9;
+$bg-color: #f3f5f9;
 $text-black: #333333;
+$subtitle-color: #242424;
+$text-orange: #ff8562;
+$text-lightblack: #223455;
 
 %header-linktext {
   font-weight: 600;
   font-size: 16px;
   line-height: 20px;
-
 }
