--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -11,7 +11,6 @@
   padding: 24px 0;
   background-color: $bg-color;
   position: relative;
-  z-index: 100;
 
   a {
     color: $text-black;
@@ -26,7 +25,6 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
-    z-index: 100;
   }
 
   &__logo-link {
@@ -94,6 +92,8 @@
   justify-content: space-between;
   width: 705px;
   margin-right: 20px;
+  z-index: 10;
+  position: relative;
 
   &__item {
     display: flex;
@@ -116,7 +116,7 @@
   display: none;
   width: 54px;
   position: relative;
-  z-index: 10;
+  z-index: 70;
 
   div {
     height: 2px;
@@ -150,42 +150,8 @@
   @extend %header-linktext;
 }
 
-.mobileMenu {
-  position: absolute;
-  top: -1000px;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  padding: 24px 0;
-  background-color: $bg-color;
-  transition: all ease-in 0.4s;
-
-  &__list {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-
-  &__item:not(:last-child) {
-    margin-bottom: 40px;
-  }
-
-  &__link {
-    @extend %header-linktext;
-  }
-
-  &__link--text {
-    text-transform: uppercase;
-  }
-}
-
 .mobileMenu__active {
-  top: 0;
+  left: 0;
 }
 
 // === /header ===
@@ -413,5 +379,86 @@
 }
 
 // === /services ===
+
+// === forums ===
+
+.forums {
+  padding-top: 88px;
+  padding-bottom: 74px;
+
+  &__inner {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__title {
+    font-size: 50px;
+    line-height: 60px;
+    font-weight: 700;
+    margin-bottom: 62px;
+    max-width: 605px;
+  }
+
+  &__slider {
+    margin-bottom: 44px;
+  }
+
+  &__slideimage {
+    margin-bottom: 20px;
+  }
+
+  &__slidetextbox {
+    width: 97%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 18px;
+    line-height: 20px;
+    font-family: $font-family3;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #000000;
+    margin-bottom: 21px;
+  }
+
+  &__slidetext {
+    color: $text-orange;
+  }
+
+  &__slidelink {
+    display: flex;
+    align-items: center;
+    color: #000;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 22px;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  &__slideicon {
+    margin-left: 13px;
+  }
+
+  &__buttons {
+    margin: 0 auto;
+    justify-self: center;
+  }
+
+  &__button {
+    padding: 0;
+    display: inline-block;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+  }
+
+  &__button--left {
+    margin-right: 27px;
+  }
+}
+
+// === /forums ===
 
 @import 'media';
