--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -28,3 +28,43 @@ $item-border: #d3d3d3;
   color: #fff;
   cursor: pointer;
 }
+
+%title {
+  font-size: 50px;
+  line-height: 60px;
+  font-weight: 700;
+}
+
+%slidetextbox {
+  width: 97%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 18px;
+  line-height: 20px;
+  font-family: $font-family3;
+  padding-bottom: 24px;
+  border-bottom: 1px solid #000000;
+  margin-bottom: 21px;
+}
+
+%slidelink {
+  display: flex;
+  align-items: center;
+  color: #000;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 22px;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+%slidebutton {
+  padding: 0;
+    display: inline-block;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+}
