--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -466,7 +466,7 @@
   }
 
   &__slidetextbox {
-    @extend %slidetextbox
+    @extend %slidetextbox;
   }
 
   &__slideimage {
@@ -482,18 +482,113 @@
   }
 
   &__buttons {
-    align-self: center
+    align-self: center;
   }
 
   &__button {
-    @extend %slidebutton 
+    @extend %slidebutton;
   }
 
   &__button--left {
-    margin-right: 27px; 
+    margin-right: 27px;
   }
 }
 
 // === /competitions ===
+
+// === policy ===
+
+.policy {
+  padding: 118px 0 56px 0;
+  position: relative;
+
+  &__decoration {
+    position: absolute;
+  }
+
+  &__decoration--1 {
+    top: 120px;
+    right: 0;
+  }
+
+  &__decoration--2 {
+    left: 0;
+    top: 0;
+
+    // TODO: остановился здесь. Не могу отстилизовать картинку, так как снизу попап через jQuery еще не дошел до него!
+  }
+
+  &__inner {
+    position: relative;
+  }
+
+  &__title {
+    @extend %title;
+    max-width: 500px;
+    padding-bottom: 18px;
+    border-bottom: 2px solid $item-border;
+    position: relative;
+    margin-bottom: 43px;
+
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: -2px;
+      left: -154px;
+      height: 2px;
+      width: 50%;
+      background-color: $item-border;
+    }
+  }
+
+  &__box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1023px;
+    margin-bottom: 74px;
+  }
+
+  &__text {
+    font-size: 18px;
+    line-height: 26px;
+    font-weight: 400;
+    color: $text-lightblack;
+  }
+
+  &__text--big {
+    max-width: 452px;
+    margin-bottom: 33px;
+  }
+
+  &__btn {
+    @extend %btn;
+  }
+
+  &__img {
+    max-width: 536px;
+    max-height: 513px;
+  }
+
+  &__text--small {
+    position: absolute;
+    top: 550px;
+    right: 0;
+    max-width: 369px;
+  }
+
+  &__popup {
+    max-width: 911px;
+    height: 397px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    background-color: #eaeaea;
+    border-radius: 46px;
+  }
+}
+
+// === /policy ===
 
 @import 'media';
