--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -513,9 +513,7 @@
 
   &__decoration--2 {
     left: 0;
-    top: 0;
-
-    // TODO: остановился здесь. Не могу отстилизовать картинку, так как снизу попап через jQuery еще не дошел до него!
+    top: 920px;
   }
 
   &__inner {
@@ -590,5 +588,53 @@
 }
 
 // === /policy ===
+
+// === friends ===
+
+.friends {
+  position: relative;
+  z-index: 600;
+  padding: 55px 0 96px 0;
+
+  &__title {
+    @extend %title;
+    text-align: center;
+    margin-bottom: 90px;
+  }
+
+  &__items {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1240px;
+    // height: 440px;
+    margin: 0 auto;
+  }
+
+  &__item {
+    background-color: #fff;
+    border-radius: 11px;
+    border: 1px solid #f2f2f2f2;
+    box-shadow: 11px 22px 27px rgba(212, 217, 232, 0.2);
+    width: 223px;
+    height: 126px;
+    margin-bottom: 30px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__link {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center
+  }
+
+}
+
+// === /friends ===
 
 @import 'media';
