--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -831,6 +831,7 @@
   &__slidetext {
     color: $text-orange;
     max-width: 313px;
+    margin-right: 20px;
   }
 
   &__slidelink {
@@ -852,10 +853,120 @@
   &__button--left {
     margin-right: 27px;
   }
-
-  
 }
 
 // === /news ===
+
+// === footer ===
+
+.footer {
+  position: relative;
+
+  &__map {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+
+  &__top {
+    max-width: 1007px;
+    padding: 51px 0 46px 0;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__box--1 {
+    max-width: 224px;
+  }
+
+  &__logoBox {
+    margin-bottom: 47px;
+  }
+
+  &__text--1 {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+  }
+
+  &__box--2 {
+    max-width: 203px;
+  }
+
+  &__subtitle {
+    color: $text-orange;
+    font-size: 26px;
+    line-height: 30px;
+    font-weight: 600;
+    margin-bottom: 18px;
+  }
+
+  &__listitem:not(:last-child) {
+    margin-bottom: 27px;
+  }
+
+  &__link {
+    color: $title-color;
+    display: inline-block;
+    margin-bottom: 3px;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  &__box--3 {
+    max-width: 283px;
+  }
+
+  &__address,
+  &__linktitle {
+    margin-bottom: 3px;
+  }
+
+  &__link--1 {
+    margin-bottom: 30px;
+  }
+
+  &__link--last {
+    margin-bottom: 33px;
+  }
+
+  &__time {
+    text-transform: uppercase;
+    font-size: 16px;
+    line-height: 26px;
+  }
+
+  // =====
+
+  &__bottom {
+    padding: 8px 0 10px 0;
+    background-color: #262626;
+    text-align: center;
+    color: #fff;
+  }
+
+  &__bottomtext,
+  &__bottomlink {
+    font-size: 14px;
+    line-height: 14px;
+    font-weight: 400;
+  }
+
+  &__bottomtext--last {
+    margin-bottom: 6px;
+  }
+
+  &__bottomlink {
+    color: $text-orange;
+
+    &:hover {
+      text-decoration: underline; 
+    }
+  }
+}
+
+// === /footer ===
 
 @import 'media';
