--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -150,8 +150,33 @@
   @extend %header-linktext;
 }
 
-.mobileMenu__active {
+.mobilemenu {
+  padding: 50px;
+  position: absolute;
+  top: -10000px;
   left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: auto;
+  background-color: $bg-color;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.4s ease;
+  text-align: center;
+
+  &__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+
+  &__link {
+    @extend %header-linktext;
+    font-size: 18px;
+  }
+}
+
+.active {
+  top: 0;
 }
 
 // === /header ===
@@ -962,7 +987,7 @@
     color: $text-orange;
 
     &:hover {
-      text-decoration: underline; 
+      text-decoration: underline;
     }
   }
 }
