--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -22,6 +22,31 @@
       font-size: 14px;
     }
   }
+
+  // === hero ===
+
+  .hero__box {
+    margin-top: 45px;
+  }
+
+  .hero__title {
+    font-size: 50px;
+    line-height: 59px;
+  }
+
+  // .hero__img {
+  //   width: 100%;
+  //   height: 100%;
+  // }
+}
+
+@media (max-width: 1300px) {
+  // === hero ===
+
+  .hero__img {
+    max-width: 600px;
+    max-height: 500px;
+  }
 }
 
 @media (max-width: 1150px) {
@@ -47,15 +72,52 @@
   }
 }
 
-@media (max-width: 866px) {
-  // .header__nav {
-  //   display: none;
-  // }
+@media (max-width: 1060px) {
+  // === hero ===
+  .hero__img {
+    max-width: 500px;
+    max-height: 400px;
+  }
+}
 
+@media (max-width: 1000px) {
+  // === hero ===
+
+  .hero__box {
+    flex-direction: column;
+    margin-top: 20px;
+    margin-bottom: 54px;
+  }
+
+  .hero__subtitle {
+    margin: 0 auto 24px auto;
+  }
+
+  .hero__textbox {
+    max-width: 100%;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+
+  .hero__text {
+    margin: 0 auto 60px auto;
+  }
+}
+
+@media (max-width: 866px) {
   .listcontacts {
     &__item--mail {
       display: none;
     }
+  }
+}
+
+@media (max-width: 710px) {
+  // === hero ===
+
+  .hero__title {
+    font-size: 45px;
+    line-height: 50px;
   }
 }
 
@@ -93,6 +155,41 @@
   }
 }
 
+@media (max-width: 638px) {
+  .hero__title {
+    font-size: 40px;
+    line-height: 42px;
+  }
+
+  .hero__img {
+    max-width: 100%;
+    // width: 100%;
+  }
+}
+
+@media (max-width: 572px) {
+  .hero__title {
+    font-size: 34px;
+    line-height: 36px;
+  }
+
+  .hero__text {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 430px) {
+  .hero__title {
+    font-size: 30px;
+    line-height: 30px;
+  }
+
+  .hero__text {
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
+
 @media (max-width: 500px) {
   .header__logo-link {
     max-width: 260px;
@@ -114,6 +211,24 @@
 
   .mobileListcontacts__link {
     font-size: 15px;
+  }
+
+  .hero__box {
+    margin-top: 0;
+  }
+}
+
+@media (max-width: 388px) {
+  // === hero ===
+
+  .hero {
+    padding: 23px 0;
+  }
+
+  .hero__title {
+    font-size: 24px;
+    line-height: 24px;
+
   }
 }
 
