14. Made responsive services section

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -35,6 +35,14 @@ $item-border: #d3d3d3;
   font-weight: 700;
 }
 
+%title1000 {
+  font-size: 40px;
+  line-height: 50px;
+  font-weight: 700;
+}
+
+%title
+
 %slidetextbox {
   width: 97%;
   display: flex;
