--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -72,6 +72,13 @@
   }
 }
 
+@media (max-width: 1200px) {
+  // === services ===
+  .services {
+    padding: 46px 0;
+  }
+}
+
 @media (max-width: 1060px) {
   // === hero ===
   .hero__img {
@@ -102,6 +109,32 @@
   .hero__text {
     margin: 0 auto 60px auto;
   }
+
+  // === services ===
+
+  .services__title {
+    font-size: 40px;
+    line-height: 50px;
+    font-weight: 700;
+  }
+
+  .services__items {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .services__item {
+    border: 1px solid $item-border;
+  }
+
+  .services__itemtext {
+    margin-bottom: 30px;
+  }
+
+  .services__itemtitle {
+    font-size: 20px;
+    line-height: 22px;
+    margin-bottom: 18px;
+  }
 }
 
 @media (max-width: 866px) {
@@ -109,6 +142,22 @@
     &__item--mail {
       display: none;
     }
+  }
+}
+
+@media (max-width: 750px) {
+  // === services ===
+  .services__title {
+    font-size: 37px;
+    line-height: 42px;
+  }
+
+  .services__subtitle {
+    margin-bottom: 30px;
+  }
+
+  .services__items {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -178,6 +227,34 @@
   }
 }
 
+@media (max-width: 500px) {
+  // === services ===
+
+  .services {
+    padding: 33px 0;
+  }
+
+  .services__items {
+    grid-template-columns: repeat(1, 1fr);
+    margin-bottom: 30px;
+  }
+
+  .services__title {
+    font-size: 30px;
+    line-height: 33px;
+  }
+
+  .services__subtitle {
+    font-size: 16px;
+    line-height: 23px;
+  }
+
+  .services__text {
+    font-size: 22px;
+    line-height: 25px;
+  }
+}
+
 @media (max-width: 430px) {
   .hero__title {
     font-size: 30px;
@@ -228,7 +305,6 @@
   .hero__title {
     font-size: 24px;
     line-height: 24px;
-
   }
 }
 
