--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -379,7 +379,7 @@
     display: inline-block;
     padding: 18px 16px;
     border: 1px solid $input-border;
-    width: 316px;
+    width: 100%;
     border-radius: 10px;
     margin-bottom: 37px;
   }
