15. Made responsive forums section

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -18,13 +18,13 @@ body {
   overflow: hidden;
 }
 
-.slick-slide {
-  margin: 0 55px;
-}
+// .slick-slide {
+//   margin: 0 55px;
+// }
 
-.slick-list {
-  margin: 0 -55px;
-}
+// .slick-list {
+//   margin: 0 -55px;
+// }
 
 .slider__link {
   color: $text-black;
