--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -41,7 +41,10 @@ $item-border: #d3d3d3;
   font-weight: 700;
 }
 
-%title
+%slideimage {
+  margin-bottom: 20px;
+    width: 97%;
+}
 
 %slidetextbox {
   width: 97%;
