--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -77,6 +77,11 @@
   .services {
     padding: 46px 0;
   }
+
+  // === forums ===
+  .forums {
+    padding: 44px 0 37px 0;
+  }
 }
 
 @media (max-width: 1060px) {
@@ -135,12 +140,35 @@
     line-height: 22px;
     margin-bottom: 18px;
   }
+
+  // === forums ===
+  .forums {
+    &__title {
+      font-size: 40px;
+      line-height: 50px;
+      margin-bottom: 56px;
+    }
+  }
 }
 
 @media (max-width: 866px) {
   .listcontacts {
     &__item--mail {
       display: none;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .logoText {
+    font-size: 12px;
+  }
+
+  .burger {
+    width: 40px;
+
+    div {
+      margin-bottom: 8px;
     }
   }
 }
@@ -159,6 +187,14 @@
   .services__items {
     grid-template-columns: repeat(2, 1fr);
   }
+
+  // === froums ===
+  .forums {
+    &__title {
+      font-size: 37px;
+      line-height: 42px;
+    }
+  }
 }
 
 @media (max-width: 710px) {
@@ -167,6 +203,15 @@
   .hero__title {
     font-size: 45px;
     line-height: 50px;
+  }
+
+  // === forums ===
+  .forums {
+    &__button {
+      img {
+        max-width: 90%;
+      }
+    }
   }
 }
 
@@ -190,20 +235,6 @@
   }
 }
 
-@media (max-width: 768px) {
-  .logoText {
-    font-size: 12px;
-  }
-
-  .burger {
-    width: 40px;
-
-    div {
-      margin-bottom: 8px;
-    }
-  }
-}
-
 @media (max-width: 638px) {
   .hero__title {
     font-size: 40px;
@@ -213,6 +244,17 @@
   .hero__img {
     max-width: 100%;
     // width: 100%;
+  }
+}
+
+@media (max-width: 600px) {
+  // === forums ===
+  .forums {
+    &__button {
+      img {
+        max-width: 80%;
+      }
+    }
   }
 }
 
@@ -231,7 +273,7 @@
   // === services ===
 
   .services {
-    padding: 33px 0;
+    padding: 33px 0 28px 0;
   }
 
   .services__items {
@@ -240,8 +282,8 @@
   }
 
   .services__title {
-    font-size: 30px;
-    line-height: 33px;
+    font-size: 28px;
+    line-height: 30px;
   }
 
   .services__subtitle {
@@ -252,6 +294,21 @@
   .services__text {
     font-size: 22px;
     line-height: 25px;
+  }
+
+  // === forums ===
+  .forums {
+    padding: 28px 0 52px 0;
+
+    &__title {
+      font-size: 28px;
+      line-height: 30px;
+      margin-bottom: 20px;
+    }
+
+    &__slider {
+      margin-bottom: 30px;
+    }
   }
 }
 
